CT/coursework-2-JacobInwald/tests/type-checking/custom/assign_invalid.choc
# RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s


def foo():
    return

foo = 1

# CHECK: Semantic error: 